# i2b2-etl

./: .gitignore  AUTHORS  Dockerfile  Dockerfile.dockerignore  LICENSE  MANIFEST.in  README.md  etl-mssql.env  etl-pgsql.env  pyproject.toml  requirements.txt  setup.py  short_requirements.txt
del/: apply_from_build_model_ml_test.py  apply_model_helper.py  apply_model_ml.py  apply_model_ml_test.py  build_model_ml.py  build_model_ml_test.py  build_model_ml_test1.py  ml_usecase.py
deployment/pg/: .env  docker-compose.yml  readme.md
development/: .env  docker-compose.yml
i2b2_cdi/: __init__.py  __main__.py  runner.py
i2b2_cdi/ML/: __init__.py  apply_build_model_ml.py  build_model_ML_helper.py  concept_API.py  llmEngine.py  mlEngine.py  mlHelper.py  ml_API.py  perform_ML.py
i2b2_cdi/MLPatientSet/: perform_MLPS.py
i2b2_cdi/common/: __init__.py  bcolors.py  bulk_uploader.py  constants.py  del_warn.py  file_util.py  json_helper.py  py_bcp.py  synthea_to_i2b2.py  utils.py
i2b2_cdi/concept/: __init__.py  concept_API.py  concept_benchmark.py  concept_count.py  concept_delete.py  concept_extract.py  config_helper.py  derivedConcept.py  human_paths.py  i2b2_concept_mapping.py  i2b2_ontology_helper.py  i2b2_sql_helper.py  perform_concept.py  runner.py  transform_file.py  utils.py
i2b2_cdi/config/: __init__.py  config.py  config_helper.py
i2b2_cdi/database/: __init__.py  cdi_database_connections.py  cdi_db_executor.py  database_helper.py
i2b2_cdi/encounter/: __init__.py  runner.py  (+6 more)
sample-data/: ex5_concepts.csv  ex5_facts.csv
sample_files/: mimic_example.json
(+142 files in other folders)
